syntax = "proto3";

option java_package = "com.aidos.doshttpserver.proto";
option java_multiple_files = true;

message AppConfig {
  string firstLaunchTime = 1;
  string serverAddress = 2;
}